--- a/Perceptron/Perceptron.vcxproj
+++ b/Perceptron/Perceptron.vcxproj
@@ -143,6 +143,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mnist.cpp" />
+    <ClCompile Include="perceptron.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="functions.h" />
+    <ClInclude Include="headers.h" />
+    <ClInclude Include="mnist.h" />
+    <ClInclude Include="perceptron.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
